--- a/_directory/data/M202-522670/data.yml
+++ b/_directory/data/M202-522670/data.yml
@@ -10,25 +10,25 @@ latitude: 45.2307
 longitude: 15.3322
 
 # koordinate HTRS96/TM (obavezno)
-kooE: 408188
-kooN: 5011416
-kooH: 285
-kooH1875: 285
+kooE: 408303.126
+kooN: 5010758.012
+kooH: 290.91
+kooH1875: 291.039
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
 # najviše 300 znakova. bez ukrašavanja teksta i praznih redaka!
-opis: "Bolcna u temelju stupa KM34-1 s lijeve strane pruge. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. 273)."
+opis: "Čavao za beton u temelju stupa KM34-1 s lijeve strane pruge. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. 273)."
 
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: 2020-01-30 11.17.30.jpg
+image: 20211222_141232.jpg
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 2020-01-30 11.17.37.jpg
+image2: 20211222_141244.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
