--- a/_directory/data/M202-520100/data.yml
+++ b/_directory/data/M202-520100/data.yml
@@ -1,7 +1,7 @@
 ---
 # ime (obavezno)
 # može biti ime ili broj točke
-name: MXVI
+name: MXVI (P520105)
 
 # koordinate (obavezno)
 # koordinate trebaju imati barem 4 decimale za što bolji prikaz
