--- a/_directory/data/M202-505600/data.yml
+++ b/_directory/data/M202-505600/data.yml
@@ -10,8 +10,8 @@ latitude: 45.3433624900359
 longitude: 15.3766624368811
 
 # koordinate HTRS96/TM (obavezno)
-kooE: 411967.859
-kooN: 5023215.605
+kooE: 4119411971.81
+kooN: 5023215.09
 kooH: 195
 kooH1875: 195.3409
 
