image extension change

--- a/_directory/data/M501-84380/data.yml
+++ b/_directory/data/M501-84380/data.yml
@@ -23,12 +23,12 @@ opis: "Bolcna na kraju perona s desne strane pruge. Mjerenja izvršena RTK metod
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: 20220310_094854.JPG
+image: 20220310_094854.jpg
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 20220310_094848.JPG
+image2: 20220310_094848.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
