--- a/_directory/data/M501-86060/data.yml
+++ b/_directory/data/M501-86060/data.yml
@@ -23,12 +23,12 @@ opis: "Zadnji desni vijak telefonskog ormarica s desne strane pruge. Mjerenja iz
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: 20220310_110502.JPG
+image: 20220310_110502.jpg
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 20220310_110444.JPG
+image2: 20220310_110444.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
