--- a/_directory/data/M501-87290/data.yml
+++ b/_directory/data/M501-87290/data.yml
@@ -23,12 +23,12 @@ opis: "Čavao za beton na krajnjem upornjaku propusta s lijeve strane pruge. Mje
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: 20220311_105232.JPG
+image: 20220311_105232.jpg
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 20220311_105224.JPG
+image2: 20220311_105224.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
