--- a/_directory/data/M501-84190/data.yml
+++ b/_directory/data/M501-84190/data.yml
@@ -23,12 +23,12 @@ opis: "Prvi lijevi vijak telefonskog ormarića s desne strane pruge. Mjerenja iz
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: 20220224_112718.JPG
+image: 20220224_112718.jpg
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 20220224_112657.JPG
+image2: 20220224_112657.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
