--- a/_directory/data/M501-85867/data.yml
+++ b/_directory/data/M501-85867/data.yml
@@ -23,12 +23,12 @@ opis: "Reper u starom temelju s lijeve strane pruge. Mjerenja izvršena RTK meto
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: 20220310_105435.JPG
+image: 20220310_105435.jpg
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 20220310_105423.JPG
+image2: 20220310_105423.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
