--- a/_directory/data/M501-87660/data.yml
+++ b/_directory/data/M501-87660/data.yml
@@ -23,12 +23,12 @@ opis: "Drveni kolac s desne strane pruge u blizini andrijinog križa. Mjerenja i
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: 20220311_114326.JPG
+image: 20220311_114326.jpg
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 20220311_114313.JPG
+image2: 20220311_114313.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
