--- a/_directory/data/M501-94185/data.yml
+++ b/_directory/data/M501-94185/data.yml
@@ -23,12 +23,12 @@ opis: "Reper ubetonirani željezni klin u ležaju klupe mosta Mura s desne stran
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: 20220407_122845.JPG
+image: 20220407_122845.jpg
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 20220407_122916.JPG
+image2: 20220407_122916.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
