--- a/_directory/data/M501-76688/data.yml
+++ b/_directory/data/M501-76688/data.yml
@@ -1,7 +1,7 @@
 ---
 # ime (obavezno)
 # može biti ime ili broj točke
-name: P76688
+name: P76688 (Uništena 16.05.2022.)
 
 # koordinate (obavezno)
 # koordinate trebaju imati barem 4 decimale za što bolji prikaz
