--- a/_directory/data/M501-80130/data.yml
+++ b/_directory/data/M501-80130/data.yml
@@ -13,7 +13,7 @@ longitude: 16.6696504011525
 kooE: 513053.5100
 kooN: 5136243.3780
 kooH: 143.68
-kooH1875: 
+kooH1875: 143.878
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
