--- a/_directory/data/M501-80150/data.yml
+++ b/_directory/data/M501-80150/data.yml
@@ -13,7 +13,7 @@ longitude: 16.6698749893737
 kooE: 513070.806
 kooN: 5136236.248
 kooH: 143.05
-kooH1875: 
+kooH1875: 143.251
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
