--- a/_directory/data/M501-80580/data.yml
+++ b/_directory/data/M501-80580/data.yml
@@ -13,7 +13,7 @@ longitude: 16.6755252922168
 kooE: 513505.681
 kooN: 5136183.077
 kooH: 142.95
-kooH1875: 
+kooH1875: 143.127
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
