--- a/_directory/data/M501-81280/data.yml
+++ b/_directory/data/M501-81280/data.yml
@@ -13,7 +13,7 @@ longitude: 16.6845282019694
 kooE: 514198.590
 kooN: 5136104.859
 kooH: 142.65
-kooH1875: 
+kooH1875: 142.831
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
