--- a/_directory/data/M501-82420/data.yml
+++ b/_directory/data/M501-82420/data.yml
@@ -13,7 +13,7 @@ longitude: 16.699163398635
 kooE: 515325.068
 kooN: 5135961.453
 kooH: 141.89
-kooH1875: 
+kooH1875: 142.091
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
