--- a/_directory/data/M501-82670/data.yml
+++ b/_directory/data/M501-82670/data.yml
@@ -13,7 +13,7 @@ longitude: 16.7024477850099
 kooE: 515577.873
 kooN: 5135930.545
 kooH: 141.09
-kooH1875: 
+kooH1875: 141.292
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
