--- a/_directory/data/M501-90250/data.yml
+++ b/_directory/data/M501-90250/data.yml
@@ -13,7 +13,7 @@ longitude: 16.8001522556684
 kooE: 523099.575
 kooN: 5135010.293
 kooH: 135.71
-kooH1875: 
+kooH1875: 135.915
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
