--- a/_directory/data/M501-91220/data.yml
+++ b/_directory/data/M501-91220/data.yml
@@ -13,7 +13,7 @@ longitude: 16.8125681374235
 kooE: 5524055.555
 kooN: 5134897.448
 kooH: 135.33
-kooH1875: 
+kooH1875: 135.537
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
