--- a/_directory/data/M501-91530/data.yml
+++ b/_directory/data/M501-91530/data.yml
@@ -13,7 +13,7 @@ longitude: 16.8166501367078
 kooE: 524369.820
 kooN: 5134871.086
 kooH: 134.71
-kooH1875: 
+kooH1875: 134.910
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
