--- a/_directory/data/M501-92885/data.yml
+++ b/_directory/data/M501-92885/data.yml
@@ -13,7 +13,7 @@ longitude: 16.8336969268679
 kooE: 525680.607
 kooN: 5135150.816
 kooH: 135.07
-kooH1875: 
+kooH1875: 135.267
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
