--- a/_directory/data/M501-81880/data.yml
+++ b/_directory/data/M501-81880/data.yml
@@ -13,7 +13,7 @@ longitude: 16.6936040286263
 kooE: 514897.148
 kooN: 5136018.482
 kooH: 141.68
-kooH1875: 
+kooH1875: 141.901
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
