--- a/_directory/data/M501-90115/data.yml
+++ b/_directory/data/M501-90115/data.yml
@@ -13,7 +13,7 @@ longitude: 16.7984352546858
 kooE: 522967.337
 kooN: 5135035.920
 kooH: 135.84
-kooH1875: 
+kooH1875: 136.029
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
