--- a/_directory/data/M501-90920/data.yml
+++ b/_directory/data/M501-90920/data.yml
@@ -13,7 +13,7 @@ longitude: 16.8087051226464
 kooE: 523758.084
 kooN: 5134939.800
 kooH: 135.62
-kooH1875: 
+kooH1875: 135.817
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
