--- a/_directory/data/M501-92080/data.yml
+++ b/_directory/data/M501-92080/data.yml
@@ -13,7 +13,7 @@ longitude: 16.8236653913122
 kooE: 524909.484
 kooN: 5134931.776
 kooH: 135.53
-kooH1875: 
+kooH1875: 135.720
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
