--- a/_directory/data/M501-90650/data.yml
+++ b/_directory/data/M501-90650/data.yml
@@ -13,7 +13,7 @@ longitude: 16.8039818858804
 kooE: 523394.368
 kooN: 5134994.069
 kooH: 135.25
-kooH1875: 
+kooH1875: 135.373
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
