--- a/_directory/data/M501-91220/data.yml
+++ b/_directory/data/M501-91220/data.yml
@@ -10,7 +10,7 @@ latitude: 46.3533593541208
 longitude: 16.8125681374235
 
 # koordinate HTRS96/TM (obavezno)
-kooE: 5524055.555
+kooE: 524055.555
 kooN: 5134897.448
 kooH: 135.33
 kooH1875: 135.537
