--- a/_directory/data/M501-94005/data.yml
+++ b/_directory/data/M501-94005/data.yml
@@ -13,7 +13,7 @@ longitude: 16.8477906056852
 kooE: 526763.912
 kooN: 5135454.617
 kooH: 135.84
-kooH1875: 
+kooH1875: 136.014
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
