--- a/_directory/data/M501-93830/data.yml
+++ b/_directory/data/M501-93830/data.yml
@@ -13,7 +13,7 @@ longitude: 16.84554438691
 kooE: 526591.265
 kooN: 5135406.055
 kooH: 135.79
-kooH1875: 
+kooH1875: 135.998
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
