--- a/_directory/data/M501-82420/data.yml
+++ b/_directory/data/M501-82420/data.yml
@@ -1,7 +1,7 @@
 ---
 # ime (obavezno)
 # može biti ime ili broj točke
-name: P82420
+name: P82420 (Uništena 24.03.2023.)
 
 # koordinate (obavezno)
 # koordinate trebaju imati barem 4 decimale za što bolji prikaz
