--- a/_directory/data/M501-52290/data.yml
+++ b/_directory/data/M501-52290/data.yml
@@ -13,7 +13,7 @@ longitude: 16.3093270339
 kooE: 485334.898
 kooN: 5138720.767
 kooH: 179.46
-kooH1875: 
+kooH1875: 179.606
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
