--- a/_directory/data/M501-54500/data.yml
+++ b/_directory/data/M501-54500/data.yml
@@ -13,7 +13,7 @@ longitude: 16.3377973835839
 kooE: 487524.4121
 kooN: 5138615.1287
 kooH: 175.08
-kooH1875: 
+kooH1875: 175.237
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
