--- a/_directory/data/M501-57050/data.yml
+++ b/_directory/data/M501-57050/data.yml
@@ -13,7 +13,7 @@ longitude: 16.3714750606143
 kooE: 490114.4901
 kooN: 5138491.3479
 kooH: 169.64
-kooH1875: 
+kooH1875: 169.758
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
