--- a/_directory/data/M501-58200/data.yml
+++ b/_directory/data/M501-58200/data.yml
@@ -13,7 +13,7 @@ longitude: 16.3860645305257
 kooE: 491236.5770
 kooN: 5138445.3736
 kooH: 168.21
-kooH1875: 
+kooH1875: 168.333
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
