--- a/_directory/data/M501-52550/data.yml
+++ b/_directory/data/M501-52550/data.yml
@@ -13,7 +13,7 @@ longitude: 16.3127269368
 kooE: 485596.365
 kooN: 5138708.562
 kooH: 177.41
-kooH1875: 
+kooH1875: 177.572
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
