--- a/_directory/data/M501-54900/data.yml
+++ b/_directory/data/M501-54900/data.yml
@@ -13,7 +13,7 @@ longitude: 16.3431624523829
 kooE: 487937.0454
 kooN: 5138607.5200
 kooH: 173.51
-kooH1875: 
+kooH1875: 173.652
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
