--- a/_directory/data/M501-56250/data.yml
+++ b/_directory/data/M501-56250/data.yml
@@ -13,7 +13,7 @@ longitude: 16.3607530048105
 kooE: 489289.8774
 kooN: 5138535.5562
 kooH: 171.07
-kooH1875: 
+kooH1875: 171.195
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
