--- a/_directory/data/M501-60150/data.yml
+++ b/_directory/data/M501-60150/data.yml
@@ -13,7 +13,7 @@ longitude: 16.4130284877719
 kooE: 493310.4145
 kooN: 5138339.6835
 kooH: 165.24
-kooH1875: 
+kooH1875: 165.384
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
