--- a/_directory/data/M501-55600/data.yml
+++ b/_directory/data/M501-55600/data.yml
@@ -13,7 +13,7 @@ longitude: 16.3522888464491
 kooE: 488638.9043
 kooN: 5138560.2697
 kooH: 172.91
-kooH1875: 
+kooH1875: 173.110
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
