--- a/_directory/data/M501-59590/data.yml
+++ b/_directory/data/M501-59590/data.yml
@@ -13,7 +13,7 @@ longitude: 16.4041961561516
 kooE: 492631.1069
 kooN: 5138380.6048
 kooH: 165.96
-kooH1875: 
+kooH1875: 166.081
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
