--- a/_directory/data/M501-60720/data.yml
+++ b/_directory/data/M501-60720/data.yml
@@ -13,7 +13,7 @@ longitude: 16.4194002154649
 kooE: 493800.4714
 kooN: 5138302.7425
 kooH: 165.25
-kooH1875: 
+kooH1875: 165.393
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
