--- a/_directory/data/M501-59000/data.yml
+++ b/_directory/data/M501-59000/data.yml
@@ -13,7 +13,7 @@ longitude: 16.396362365903
 kooE: 492028.5875
 kooN: 5138402.7694
 kooH: 166.92
-kooH1875: 
+kooH1875: 167.059
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
