--- a/_directory/data/M501-59670/data.yml
+++ b/_directory/data/M501-59670/data.yml
@@ -1,34 +1,34 @@
 ---
 # ime (obavezno)
 # može biti ime ili broj točke
-name: P60150
+name: P59670 (novo)
 
 # koordinate (obavezno)
 # koordinate trebaju imati barem 4 decimale za što bolji prikaz
 # možete koristiti T7D za transformaciju HTRS96/TM koordinata iz ENH u DEG oblik (https://t7d.dgu.hr/)
-latitude: 46.3847234681155
-longitude: 16.4130284877719
+latitude: 46.384996042421655
+longitude: 16.40520036220551
 
 # koordinate HTRS96/TM (obavezno)
-kooE: 493310.4145
-kooN: 5138339.6835
-kooH: 165.24
-kooH1875: 165.384
+kooE: 0
+kooN: 0
+kooH: 0
+kooH1875: 166.224
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
 # najviše 300 znakova. bez ukrašavanja teksta i praznih redaka!
-opis: "Oznaka za dugi trak br. 16 s desne strane pruge. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu."
+opis: "Vrh DTT-a sa desne strane pruge. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu. (uništen 21.08.2024.)"
 
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: 20210811_101710.jpg
+image: IMG_20250801_095244.jpg
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 20210811_101721.jpg
+image2: IMG_20250801_095359.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
